GitAssgn/force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>