GitAssgn/force-app/main/default/objects/Employee__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <label>Role ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>