GitAssgn/force-app/main/default/objects/Employee__c/fields/Salary_Credited_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Credited_Till_Date__c</fullName>
    <label>Salary Credited Till Date</label>
    <summarizedField>Salary_Detail__c.Gross_Salary__c</summarizedField>
    <summaryForeignKey>Salary_Detail__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>