GitAssgn/force-app/main/default/objects/Employee__c/fields/Skills_or_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Skills_or_Expertise__c</fullName>
    <label>Skills or Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Dot Net</fullName>
            </value>
            <value>
                <fullName>Force.com</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Project Planning</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>