GitAssgn/force-app/main/default/objects/Employee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(  AND( Is_Active__c , Is_on_Notice_Period__c),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
  IF( Is_Active__c ,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>