GitAssgn/force-app/main/default/objects/Employee__c/fields/Unique_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Employee_ID__c</fullName>
    <label>Unique Employee ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>