GitAssgn/force-app/main/default/objects/Employee__c/validationRules/Emp_Age_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Emp_Age_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Age__c &gt; 30 ,  Age__c &lt; 21 )</errorConditionFormula>
    <errorMessage>Age should be between 21-30</errorMessage>
</ValidationRule>