GitAssgn/force-app/main/default/objects/Employee__c/validationRules/Emp_Age_Rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Emp_Age_Rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Please provide a valid Date of birth. Employee cannot be less than
18 years of Age.</errorMessage>
</ValidationRule>