GitAssgn/force-app/main/default/objects/Employee__c/validationRules/Is_Notice_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Notice_Period</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Is_on_Notice_Period__c = true,  ISBLANK( Resignation_Date__c ),NULL)</errorConditionFormula>
    <errorDisplayField>Resignation_Date__c</errorDisplayField>
    <errorMessage>Resignation Date Cannot be blanked.</errorMessage>
</ValidationRule>