GitAssgn/force-app/main/default/objects/Employee__c/validationRules/Last_Working_Day_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Working_Day_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Last_Working_Day__c  &lt;  Date_of_Joining__c</errorConditionFormula>
    <errorMessage>Last working date cannot be greater than joining date</errorMessage>
</ValidationRule>