GitAssgn/force-app/main/default/objects/Employee__c/validationRules/SSN_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( TEXT( SSN__c ) )  &lt;&gt; 10</errorConditionFormula>
    <errorMessage>Length of SSN should be 10</errorMessage>
</ValidationRule>