GitAssgn/force-app/main/default/objects/Employee__c/listViews/Active_Employee.listView-meta.xml
<ListView>
    <fullName>Active_Employee</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>Last_Working_Day__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Employee</label>
</ListView>