GitAssgn/force-app/main/default/objects/Employee__c/listViews/Inactive_Employees.listView-meta.xml
<ListView>
    <fullName>Inactive_Employees</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Employees</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>